AG-8664 - fixed wrong z-index for popup editors

--- a/grid-community-modules/styles/src/internal/base/parts/_common-structural.scss
+++ b/grid-community-modules/styles/src/internal/base/parts/_common-structural.scss
@@ -928,7 +928,6 @@
 
     .ag-popup-editor {
         position: absolute;
-        z-index: 1;
         @include ag.selectable(none);
     }
 
